[package]
name = "mastrena_3"
version = "0.1.0"
edition = "2021"
authors = ["beltradini"]
license = "MIT"
description = "A simulation system for the Mastrena 3.0 espresso machine"
readme = "README.md"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"