[package]
name = "espressia"
version = "1.0.0"
edition = "2021"
authors = ["Alejandro Beltrán"]
license = "MIT"
readme = "README.md"

[dependencies]
axum = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }