[package]
name = "espressia"
version = "1.0.0"
edition = "2021"
authors = ["Alejandro Beltrán"]
license = "MIT"
readme = "README.md"

[dependencies]
axum = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
sled = "0.34"
chrono = "0.4"